<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0          http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.viablespark.mappers</groupId>
    <version>2.0-SNAPSHOT</version>
    <artifactId>entity-mapper-parent-pom</artifactId>
    <packaging>pom</packaging>
    <name>Entity Mapper Parent POM</name>
    <organization>
        <name>viablespark.org</name>
    </organization>
    <modules>
        <module>object-criteria-factory</module>
        <module>entity-mapper-demo</module>
        <module>java-entity-mapper</module>
        <module>scala-entity-mapper</module>
    </modules>
    <build>        
        <pluginManagement>
            <plugins>                
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>                    
                    <configuration>
                        <source>11</source>
                        <target>11</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <!--compilerArgument>-Xlint:unchecked</compilerArgument-->
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>                    
                    <configuration>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.4.2</version>    
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencies>
        
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.4.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>5.1.0</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>5.3.22</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
       
    </dependencies>
    
    <properties>
        <maven.test.skip>false</maven.test.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <profiles>
        <profile>
            <id>skip-tests</id>
            <properties>
                <maven.test.skip>true</maven.test.skip>
            </properties>
        
        </profile>
    
    </profiles>
    
    <repositories>
     
    </repositories>


    <distributionManagement>
     
    </distributionManagement>
    
</project>
